--- a/src/main/resources/templates/new-job.html
+++ b/src/main/resources/templates/new-job.html
@@ -8,8 +8,8 @@
 
 <div class="container body-content">
 
-    <form th:object="${jobForm}" method="post">
 
+    <form th:object="${jobForm}" method="post">
         <div class="form-group">
             <label th:for="name">Name</label>
             <input th:field="*{name}" />
@@ -25,10 +25,39 @@
             </select>
         </div>
 
-        <!-- TODO #5 - Create <select> dropdowns for other job fields -->
+        <div class="form-group">
+            <label th:for="locationId">Location</label>
+            <select th:field="*{location}">
+                <option th:each="location : *{locations}"
+                        th:value="${location.id}"
+                        th:text="${location.value}"></option>
+            </select>
 
-        <input type="submit" value="Add Job" />
+        </div>
+
+        <div class="form-group">
+            <label th:for="coreCompetencyId">Mad Skill</label>
+            <select th:field="*{coreCompetency}">
+                <option th:each="coreCompetency : *{coreCompetencies}"
+                        th:value="${coreCompetency.id}"
+                        th:text="${coreCompetency.value}"></option>
+            </select>
+        </div>
+
+
+        <div class="form-group">
+            <label th:for="positionId">Position</label>
+            <select th:field="*{positionType}">
+                <option th:each="positionType : *{positionTypes}"
+                        th:value="${positionType.id}"
+                        th:text="${positionType.value}"></option>
+            </select>
+        </div>
+
+        <input type="submit" value="Add Job"/>
+
     </form>
+    <p>Click the "Add Job" button to add the Job to the Employer Database.</p>
 
 </div>
 
